--- a/main.html
+++ b/main.html
@@ -10,7 +10,27 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-
+         <h1>My Playlist</h1>
+	<div class="playlist">
+		<ul>
+			<li> <a target="_blank">Song 1</a> </li>
+			<li><a target="_blank">Song 2</a></li>
+			<li><a target="_blank">Song 3</a></li>
+			<li><a target="_blank">Song 4</a></li>
+			<li><a target="_blank">Song 5</a></li>
+		</ul>
+	</div>
+	<h2>Now Playing...</h2>
+	<div class="playing">
+		<video controls class="player_one">
+			<source  src="https://www.w3schools.com/tags/movie.mp4" type="">
+		</video>
+		<h2 >MP3 songs</h2>
+		<p>Maan Meri Jaan</p>
+		<audio class="player_two" controls>
+			<source type="" src="https://www.pagalworld.com.se/files/download/id/64630">
+		</audio>
+	</div>
 </body>
 
 </html>
